# kwipe

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  configure.ac  ssd-guide.md
.github/workflows/: package.yml
man/: Makefile.am  kwipe.8
src/: Makefile.am  conf.c  conf.h  context.h  create_pdf.c  create_pdf.h  customers.c  customers.h  device.c  device.h  entropy.c  entropy.h  gui.c  gui.h  hpa_dco.c  hpa_dco.h  kwipe.c  kwipe.h  logging.c  logging.h  method.c  method.h  miscellaneous.c  miscellaneous.h  nwipe.c  nwipe.h  options.c  options.h  pass.c  pass.h  prng.c  prng.h  temperature.c  temperature.h  version.c
src/aes/: aes_ctr_prng.c  aes_ctr_prng.cpp  aes_ctr_prng.h
src/embedded_images/: kwipe_exclamation.jpg.c  kwipe_exclamation.jpg.h
src/hddtemp_scsi/: get_scsi_temp.c  scsi.c
src/include/SFMT-src-1.5.1/: main.c  main.cpp  sample1
src/mt19937ar-cok/: mt19937ar-cok.c  mt19937ar-cok.h
src/philox/: philox_prng.c  philox_prng.h
src/rc4/: rc4_genrand_4096_to_buf_avx2.S  rc4_prng.c
src/sha/: sha_dbrg_prng.c  sha_dbrg_prng.h
src/xor/: README.md  xoroshiro256_prng.c  xoroshiro256_prng.h
